Added mobile profile management and edit functionality